<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pom Task</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="content_new">New</string>
    <string name="taskname_hint">Task Name</string>
    <string name="label_list">List</string>
    <string name="prior_star">Star</string>
    <string name="prior_one">1</string>
    <string name="prior_two">2</string>
    <string name="prior_three">3</string>
    <string name="prior_none">None</string>
    <string name="label_duedate">Due Date</string>
    <string name="label_reminder">Reminder</string>
    <string name="label_repeat">Repeat</string>
    <string name="label_goal">Goal</string>
    <string name="label_poms">Poms</string>
    <string name="delete_but">Delete</string>
    <string name="ok_but">OK</string>
    <string name="cancel_but">Cancel</string>
    <string name="but_stat">Statistic</string>
    <string name="but_setTime">Set a Timer</string>
    <string name="about">About</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="most">Most Productive day</string>
    <string name="zero">0</string>

</resources>