<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<TextView 

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/but_stat"
    android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:textSize="20sp"
    
    />
    
<TextView 

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/today"
    android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
    android:textSize="20sp"
    />
<TextView 

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/week"
    android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
    android:textSize="20sp"
    />
<TextView 

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/month"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:textSize="20sp"
    
    />      
    <TextView 

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/most"
    android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
    android:textSize="20sp"
    /> 
</LinearLayout>
