<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/but_statis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        
        android:text="@string/but_stat" />

    <TextView
        android:id="@+id/but_setTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
       android:text="@string/but_setTime"
        
        
        />
    <TextView 
        android:id="@id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/about"
        
        />
    
    
</LinearLayout>